[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "riptide-lib"
version = "0.9.2"
description = "Tool to manage development environments for web applications using containers - Library Package"
readme = "README.rst"
requires-python = ">=3.8"
license = { file = "LICENSE" }
authors = [
    { name = "Marco Köpcke", email = "hello@capypara.de" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "configcrunch >= 1.0.3",
    "schema >= 0.7",
    "pyyaml >= 5.4",
    "appdirs >= 1.4",
    "janus >= 0.7",
    "psutil >= 5.8",
    "GitPython >= 3.1",
    "pywinpty >= 0.5.5; sys_platform == 'win32'",
    "python-hosts >= 0.4",
    "python-dotenv >= 0.19.0"
]

[project.urls]
Repository = "https://github.com/theCapypara/riptide-lib"
Documentation = "https://riptide-docs.readthedocs.io"

[tool.setuptools.packages.find]
exclude = ["test_assets"]
