[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "riptide-lib"
version = "0.10.0"
description = "Tool to manage development environments for web applications using containers - Library Package"
readme = "README.rst"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
    { name = "Marco Köpcke", email = "hello@capypara.de" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "configcrunch >= 1.1.0",
    "schema >= 0.7",
    "pyyaml >= 6.0",
    "appdirs >= 1.4",
    "janus >= 2.0",
    "psutil >= 7.0",
    "GitPython >= 3.1",
    "pywinpty >= 2.0; sys_platform == 'win32'",
    "python-hosts >= 1.0",
    "python-dotenv >= 1.1.0"
]

[project.urls]
Repository = "https://github.com/theCapypara/riptide-lib"
Documentation = "https://riptide-docs.readthedocs.io"

[tool.setuptools.packages.find]
exclude = ["test_assets"]
