[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "riptide-lib"
version = "0.10.0"
description = "Tool to manage development environments for web applications using containers - Library Package"
readme = "README.rst"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
    { name = "Marco Köpcke", email = "hello@capypara.de" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "configcrunch >= 2.0.0",
    "schema >= 0.7",
    "pyyaml >= 6.0",
    "appdirs >= 1.4",
    "janus >= 2.0",
    "psutil >= 7.0",
    "GitPython >= 3.1",
    "pywinpty >= 2.0; sys_platform == 'win32'",
    "python-hosts >= 1.0",
    "python-dotenv >= 1.1.0"
]

[project.urls]
Repository = "https://github.com/theCapypara/riptide-lib"
Documentation = "https://riptide-docs.readthedocs.io"

[tool.setuptools.packages.find]
exclude = ["test_assets", "test_reports"]

[tool.ruff]
line-length = 120

[tools.ruff.lint]
select = ["W", "E", "F", "ARG"]

[tool.mypy]
warn_unused_configs = true
mypy_path = "."
explicit_package_bases = true
namespace_packages = true
check_untyped_defs = true
exclude = ["test_assets"]

[[tool.mypy.overrides]]
module = [
    "appdirs",
    "python_hosts",
    "schema",
    "winpty",
    "python_hosts.exception"
]
ignore_missing_imports = true
